--- a/Python+NumpyGeneral.ipynb
+++ b/Python+NumpyGeneral.ipynb
@@ -12,7 +12,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/TechX-NLP-CV/Python-Numpy_Tutorial/blob/main/Python+NumpyGeneral.ipynb)"
+        "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/TechX-NLP-CV/Python-Numpy_Tutorial/blob/main/Python%2BNumpyGeneral.ipynb)"
       ],
       "metadata": {
         "id": "Uz6Xsy2HBgn9"
